--- a/GuessingGame.html
+++ b/GuessingGame.html
@@ -1,5 +1,5 @@
 <html>
-<h1 align="center"> Hello Welcome To The #1 Guessing Game</h1>
+<h1 align="center"> The #1 Guessing Game</h1>
 <button type="button" onclick = "randomnumber()"> Play the Guessing Game</button>
 <script>
 function randomnumber(){
