--- a/GuessingGame.html
+++ b/GuessingGame.html
@@ -14,7 +14,7 @@ theirnumber = prompt("Guess the number (1-10):");
 		console.log("wrong")
     }
             
- 	prompt("Better luck next that was wrong, your number was:" + " " + number)
+ 	prompt("Better luck next that was wrong, the number was:" + " " + number)
 }
 
 randomnumber()
