--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 # EthanIscV.github.io
-<h1>Oh, Hey didn't see you there. But since you're here... Welcome </h1>
+<h1>Oh, Hey didn't see you there. But since you're here... Welcome! </h1>
