--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 # EthanIscV.github.io
 <h1>Oh, Hey didn't see you there. But since you're here... Welcome! </h1>
 <button type="button">Click Me!</button>
+ <button onclick="window.location.href = 'https://ethaniscv.github.io/GuessingGame.html';">Click Here</button>
+   </body>
+</html>
