--- a/GuessingGame.html
+++ b/GuessingGame.html
@@ -18,6 +18,9 @@ theirnumber = prompt("Guess the number (1-10):");
 }
 
 randomnumber()
+ 
+	
+	<button onclick="window.location.href = 'https://ethaniscv.github.io/index.html';">Click Here</button>
 
 </script>
 <html>
