--- a/GuessingGame.html
+++ b/GuessingGame.html
@@ -18,6 +18,7 @@ theirnumber = prompt("Guess the number (1-10):");
 }
 
 randomnumber()
- 
+
 </script>
 <html>
+<button onclick="window.location.href = 'https://EthanIscV.github.io/index.html';">Click Here</button>
