--- a/index.html
+++ b/index.html
@@ -2,5 +2,9 @@
 <h1>Oh, Hey didn't see you there. But since you're here... Welcome! </h1>
 <button type="button">Click Me!</button>
  <button onclick="window.location.href = 'https://ethaniscv.github.io/GuessingGame.html';">Click Here</button>
+
+
+<iframe src="https://open.spotify.com/embed/playlist/1McEPS2Llv8imSlBmbsUyy" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
    </body>
 </html>
