--- a/Website main.html
+++ b/Website main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Oh, Hey didn't see you there. But since you're here... Welcome!</title>
 
 <style>
 body {
