--- a/Website main.html
+++ b/Website main.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Oh, Hey didn't see you there. But since you're here... Welcome!</title>
+<title>Bet you dont know the true meaning of this website</title>
+<h1>Oh, Hey didn't see you there. But since you're here... Welcome! </h1>
+<button type="button">Click Me!</button>
+ <button onclick="window.location.href = 'https://ethaniscv.github.io/GuessingGame.html';">Click Here</button>
 
-<style>
+
+<iframe src="https://open.spotify.com/embed/playlist/7ec66xvS8SwvU49dzEaaSZ" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
 body {
-	background-image: url(" ");
+	background-image: url("Salmon-Background.jpg");
         background-repeat:no-repeat;
        background-size:cover;
 } 
