--- a/Website main.html
+++ b/Website main.html
@@ -9,7 +9,7 @@
 
 <iframe src="https://open.spotify.com/embed/playlist/7ec66xvS8SwvU49dzEaaSZ" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
-body {
+<body> {
 	background-image: url("Salmon-Background.jpg");
         background-repeat:no-repeat;
        background-size:cover;
