--- a/GuessingGame.html
+++ b/GuessingGame.html
@@ -22,3 +22,8 @@ randomnumber()
 </script>
 <html>
 <button onclick="window.location.href = 'https://EthanIscV.github.io/index.html';">Click Here</button>
+<style>
+body {
+	background-image: url("QuestionMarksEverywhere.jpg");
+	} 
+</style>
