--- a/Website main.html
+++ b/Website main.html
@@ -3,7 +3,7 @@
 <head>
 <title>Bet you dont know the true meaning of this website</title>
 <h1>Oh, Hey didn't see you there. But since you're here... Welcome! </h1>
-<button type="button">Click Me!</button>
+<button onclick="window.location.href = 'https://ethaniscv.github.io/Pancake.html';">Click Here For Deep Web...</button>
  <button onclick="window.location.href = 'https://ethaniscv.github.io/GuessingGame.html';">Click Here</button>
 
 
