--- a/GuessingGame.html
+++ b/GuessingGame.html
@@ -21,7 +21,7 @@ randomnumber()
 
 </script>
 <html>
-<button onclick="window.location.href = 'https://EthanIscV.github.io/index.html';">Click Here</button>
+<button onclick="window.location.href = 'https://EthanIscV.github.io/Website main.html';">Click Here</button>
 <style>
 body {
 	background-image: url("QuestionMarksEverywhere.jpg");
