--- a/Website main.html
+++ b/Website main.html
@@ -5,6 +5,7 @@
 <h1>Oh, Hey didn't see you there. But since you're here... Welcome! </h1>
 <button onclick="window.location.href = 'https://ethaniscv.github.io/Pancake.html';">Click Here For Deep Web...</button>
  <button onclick="window.location.href = 'https://ethaniscv.github.io/GuessingGame.html';">Click Here</button>
+	<button onclick="window.location.href = 'https://ethaniscv.github.io/Milk.html';">Just for fun!</button>
 
 
 <iframe src="https://open.spotify.com/embed/playlist/7ec66xvS8SwvU49dzEaaSZ" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
